@@ -150,6 +150,7 @@
                     <argLine>
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.compose=ALL-UNNAMED
+                        --add-opens wtf.metio.ilo/wtf.metio.ilo.devcontainer=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.exec=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.shell=ALL-UNNAMED
